# MineBtc-fi

./: .cursorrules  .dogegod-test  .env.example  .gitignore  ADDRESSES.md  Anchor.toml  BACKEND_GAME_STATE_SPEC.md  CAST_AUDIT_REPORT.md  CONTRIBUTING.md  CRANKER_BOT_AUDIT.md  FRONTEND_SIMULATE_PURCHASE_COST.md  GAME_LOGIC_AND_UI_NOTES.md  GRID_PLACEMENT_SYSTEM.md  GTM.md  LICENSE  MOONBASE_REWRITE_SUMMARY.md  MOONBASE_USER_FUNCTIONS_GUIDE.md  PVP_GAME_DESIGN.md  README.md  Readme.md  SECURITY.md  backend.md  package-lock.json  refactor.sh  start-localnet.sh
.github/workflows/: ci.yml
.superstack/: build-context.md
codex-index/: accounts-and-pdas.md  deployment-and-initialization.md  economy-and-rewards.md  events-and-indexing.md  frontend-backend-data.md  index.md  instruction-surface.md
docs/: COMPLETE_SYSTEM_ARCHITECTURE.md  DRAGON_EGG_NFT_LOCKING.md  DRAGON_EGG_SYSTEM.md  ECONOMIC_SYSTEMS_TECHNICAL_GUIDE.md  ECONOMY.md  FIXES_AND_IMPROVEMENTS.md  GAMEPLAY.md  LATEST_UPDATES_OCT_15.md  LOOT_DISTRIBUTION_SYSTEM.md  LOOT_SYSTEM_COMPLETE.md  MODULE_SYSTEM_IMPLEMENTATION.md  NFTS.md  NFT_MARKETPLACE_IMPLEMENTATION_SPEC.md  PVP_GAME_DESIGN.md  README.md  TILE_PLACEMENT_COMPLETE.md  XP_LOOT_SYSTEM_IMPLEMENTATION.md  XP_SYSTEM_COMPLETE.md
dragonhive_nfts/: Anchor.toml  MOONBASE_INTEGRATION_EXAMPLE.md  MPL_CORE_INTEGRATION_COMPLETE.md  NFT_LAUNCHPAD_README.md  README.md  URI_SYSTEM_UPDATE.md  rust-toolchain.toml
dragonhive_nfts/programs/nfts_launchpad/: Cargo.toml
dragonhive_nfts/programs/nfts_launchpad/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
dragonhive_nfts/programs/nfts_launchpad/src/instructions/: admin.rs  breeding.rs  honey_admin.rs  mod.rs  queries.rs  user.rs
future_scope/moondoge_amm/programs/weighted_amm/: Cargo.toml
future_scope/moondoge_amm/programs/weighted_amm/src/: events.rs  math.rs
future_v2/moondoge_amm/: Anchor.toml
future_v2/moondoge_launchpad/: Anchor.toml
idl/: README.md  degenbtc_market.json  minebtc.json
moondoge_launchpad/programs/token_launchpad/: Cargo.toml
moondoge_launchpad/programs/token_launchpad/src/: events.rs  lib.rs
moondoge_launchpad/programs/token_launchpad/src/instructions/: mod.rs
outdated_dump/: .cursorrules  README.md  rust-toolchain.toml
outdated_dump/docs/: LOOT_DISTRIBUTION_SYSTEM.md  PVP_GAME_DESIGN.md  XP_LEVELS_SYSTEM.md  XP_LOOT_SYSTEM_IMPLEMENTATION.md
outdated_dump/dragonhive_nfts/: IMPLEMENTATION_SUMMARY.md  METAPLEX_CORE_INTEGRATION.md  MOONBASE_INTEGRATION_EXAMPLE.md  MPL_CORE_INTEGRATION_COMPLETE.md  NFT_LAUNCHPAD_README.md  OWNERSHIP_FIX_SUMMARY.md  SOLANA_PROGRAM_UPGRADES.md  URI_SYSTEM_UPDATE.md
outdated_dump/dragonhive_nfts/programs/nfts_launchpad/: Cargo.toml
outdated_dump/dragonhive_nfts/programs/nfts_launchpad/src/: constants.rs  errors.rs  events.rs  lib.rs  mpl_core_helpers.rs  state.rs  utils.rs
outdated_dump/dragonhive_nfts/programs/nfts_launchpad/src/instructions/: admin.rs  user.rs
outdated_dump/prod_moonbase/: Anchor.toml
outdated_dump/prod_moonbase/programs/moon_economy/: Cargo.toml
outdated_dump/prod_moonbase/programs/moon_economy/src/: events.rs  lib.rs  state.rs
outdated_dump/prod_moonbase/programs/moon_economy/src/instructions/: admin.rs  user.rs
outdated_dump/setup_scripts/: 1_init_mdoge_token.js  2_init_mdoge_SOL_pool.js  3_init_moonbase.js  4_init_moonEconomy.js  5_add_modules.js  5_website_config.js  README.md  config.json  deploy.js  helper.js  init_moonUsers.js  moon_base.json  package.json  token_stats.js
programs/degenbtc_market/: Cargo.toml
programs/degenbtc_market/src/: errors.rs  events.rs  lib.rs  mpl_core_helpers.rs  state.rs
programs/degenbtc_market/src/instructions/: buy_listing.rs  cancel_listing.rs  initialize.rs  list_nft.rs  mod.rs  reclaim_stale_listing.rs  transfer_admin.rs  update_config.rs  update_listing_price.rs
programs/launchpad/: Cargo.toml
programs/launchpad/src/: constants.rs  errors.rs  events.rs  lib.rs  mpl_core_helpers.rs  queries.rs  state.rs  utils.rs
programs/launchpad/src/instructions/: admin.rs  mod.rs  user.rs
programs/mineBTC/: Cargo.toml  ECONOMY.md  STAKING.md  claude.md
programs/mineBTC/src/: errors.rs  events.rs  genescience.rs  lib.rs  mpl_core_helpers.rs  state.rs
programs/mineBTC/src/instructions/: admin.rs  doges.rs  economy.rs  eggs.rs  epoch.rs  faction_war.rs  faction_war.rs.bak  game.rs  hashbeasts.rs  helper.rs  marketplace_cpi.rs  mod.rs  rebase.rs  stake.rs  tax.rs  user.rs
programs/moonbase/: Cargo.toml
programs/moonbase/src/: README_GAME_USER_ANALYSIS.md  errors.rs  events.rs  genescience.rs  lib.rs  mpl_core_helpers.rs  state.rs
programs/moonbase/src/instructions/: admin.rs  economy.rs  eggs.rs  game.rs  helper.rs  mod.rs  stake.rs  surge.rs  tax.rs  user.rs
programs/mooneconomy/: Cargo.toml
programs/mooneconomy/src/: errors.rs  events.rs  lib.rs  state.rs
programs/mooneconomy/src/instructions/: admin.rs  helper.rs  mod.rs  user.rs
programs/nft-launchpad/: Cargo.toml  Xargo.toml
programs/nft-launchpad/src/: lib.rs
raydium/: Anchor.toml  Cargo.toml
setup_scripts/: 0_deploy_game.js  0_deploy_raydium.js  1_init_degenbtc_token.js  1_init_mdoge_token.js  2_init_degenbtc_SOL_pool.js  2_init_mdoge_SOL_pool.js  3_create_dragon_egg_collection.js  3_init_mineBTC.js  3_init_moonbase.js  4_init_moonEconomy.js  4_init_moonbase.js  5_add_modules.js  5_create_user_moonbase.js  5_init_moonEconomy.js  5_website_config.js  6_add_modules.js  6_website_config.js  DEPLOYMENT_GUIDE.md  DRAGON_EGG_SETUP_GUIDE.md  ORACLE_FIXES_SUMMARY.md  README.md  START_LOCALNET_WITH_MPL.md  audit_authorities.js  check_state.js  config.json  deploy.js  do_txs.js  economy_cycle_step.js  end_round_4.mjs  helper.js  import_keypair.js  init_moonUsers.js  load_config.js  moon_base.json  package-lock.json  package.json  price_snapshot_loop.js  raydium_id_sync.js  render_header_blink_gif.js  rotate_admin.js  (+14 more)
setup_scripts/admin/: multisig_admin.js  multisig_fee_recepient.js  set_token_authority.js  set_upgrade_authority.js
setup_scripts/deployments/: devnet.json  localnet.json  (+3 more)
(+61 files in other folders)
