[package]
name = "degenbtc_market"
version = "0.1.0"
description = "MineBTC degenBTC marketplace — minimal mpl-core NFT marketplace for the HashBeast collection"
edition = "2021"
license = "BUSL-1.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "degenbtc_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
mpl-core = { version = "0.11", features = ["anchor"] }
solana-program = "2.3.0"
solana-security-txt = "1.1.1"
