[package]
name = "nft-launchpad"
version = "0.1.0"
description = "NFT Launchpad program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_launchpad"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mpl-token-metadata = { version = "5.1.1" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
mpl-core = "0.8.1"