[package]
name = "minebtc"
version = "1.0.0"
description = "MineBTC — Faction warfare game on Solana with betting, staking, NFTs, and deflationary tokenomics"
edition = "2021"
license = "BUSL-1.1"
homepage = "https://minebtc.fun"
repository = "https://github.com/LifeOrDream/MineBtc-fi"

[lib]
crate-type = ["cdylib", "lib"]
name = "minebtc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
 
[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1", features = ["token_2022"] }
mpl-core = { version = "0.11", features = ["anchor"] }
mpl-token-metadata = { version = "5.1.1" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
solana-program = "2.3.0"
raydium-cp-swap = { path = "../../raydium/programs/cp-swap", features = ["cpi"] }
degenbtc_market = { path = "../degenbtc_market", features = ["cpi"] }
subtle = { version = "2", default-features = false }
constant_time_eq = "0.3"
solana-security-txt = "1.1.1"
