[package]
name = "moonbase"
version = "1.0.0"
description = "MoonBase main program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moonbase"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mpl-core = "0.10.1"
mpl-token-metadata = { version = "5.1.1" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
launchpad = { path = "../launchpad", features = ["cpi"] }
raydium-cp-swap = { path = "../../raydium/programs/cp-swap", features = ["cpi"] }
