[package]
name = "moonbase"
version = "1.0.0"
description = "MoonBase main program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moonbase"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1", features = [
  "token_2022",
  "idl-build",         # required so Mint/TokenAccount expose IDL types
] }
mpl-core = "0.10.1"
mpl-token-metadata = { version = "5.1.1" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
raydium-cp-swap = { path = "../../raydium/programs/cp-swap", features = ["cpi"] }
