[package]
name = "moonEconomy"
version = "0.1.0"
description = "Moon Economy which regulates electricity generation for DogeBtc Game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mooneconomy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
mpl-core = "0.10.1" 
mpl-token-metadata = { version = "5.1.1" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
moonbase = { path = "../moonbase", features = ["cpi"] }
subtle = { version = "2", default-features = false }
constant_time_eq = "0.3"