[package]
name = "nft-launchpad"
version = "0.1.0"
description = "NFT Launchpad program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_launchpad"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
