[package]
name = "moon_base"
version = "0.1.0"
description = "Moon Base Facility Management Program for MoonDoge Game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moon_base"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
mpl-core = "0.9.1" 
mpl-token-metadata = { version = "5.1.0" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
raydium-cp-swap = { path = "../../../raydium/programs/cp-swap", features = ["cpi"] }
# spl-token-2022 = { version = "8.0.1", default-features = false, features = ["no-entrypoint"] }