[package]
name = "nfts_launchpad"
version = "0.1.0"
description = "DragonHive NFT Launchpad Program for DragonBee NFT management and breeding"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nfts_launchpad"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
mpl-core = "0.9.1" 
mpl-token-metadata = { version = "5.1.0" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
# spl-token-2022 = { version = "8.0.1", default-features = false, features = ["no-entrypoint"] }