[package]
name = "token_launchpad"
version = "0.1.0"
description = "Pump.fun-style token launchpad with bonding curves"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
solana-program = "1.18.0"
mpl-token-metadata = { version = "4.1.2", features = ["serde"] }
