[package]
name = "weighted_amm"
version = "0.1.0"
description = "Weighted AMM inspired by Raydium with Balancer-style math"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "weighted_amm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
solana-program = "1.18.0"
