[package]
name = "moon_economy"
version = "0.1.0"
description = "Moon Economy which regulates electricity generation for DogeBtc Game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moon_economy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
mpl-core = "0.9.1" 
mpl-token-metadata = { version = "5.1.0" }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
moon_base = { path = "../moon_base", features = ["cpi"] }